chore(ci): upgrade to java 21